# hermes-plugin-oss-repo-agent

./: .gitignore  README.md  __init__.py  after-install.md  commands.py  config.example.toml  config.example.yaml  config.py  executor.py  fala-package.toml  github_cli.py  kanban.py  plugin.yaml  pyproject.toml  redaction.py  requirements.txt  schema.py
.omo/: canary-outcome-2026-07-19.md
docs/: auto-worker.md  effector-catalog.md  fala-intake-slice.md  github-kanban-mapping.md
examples/: config.example.yaml
launchd/: com.hermes.oss-repo-agent.dispatch.plist.template  com.hermes.oss-repo-agent.pr-triage.plist.template
schemas/: config.schema.json
scripts/: cron_repo_issue_to_pr_dispatch.sh  cron_repo_pr_triage.sh  push_and_smoke_fala_ticks.sh  repo_agent_backfill.sh  repo_agent_cleanup.sh  repo_agent_health.sh  repo_agent_hermes_update.sh  repo_agent_repos.sh  repo_agent_smoke.sh  repo_agent_status.sh  repo_agent_webhook.sh  repo_issue_intake.sh  repo_issue_to_pr_dispatch.sh  repo_pr_triage.sh
tests/: dispatcher_worker_fixture.py  test_adapters_cwd.py  test_atomic_effectors.py  test_cleanup_receipts.py  test_cleanup_reconcile.py  test_context_mining_blockers.py  test_decide_matrix.py  test_deployment_candidate.py  test_deployment_parity.py  test_dispatch_fail_open.py  test_dispatch_worker_background.py  test_dispatch_worktree_ready.py  test_effector.py  test_facade_fail_closed.py  test_fala_intake_flow.py  test_fala_runtime_contract.py  test_fala_triage_router.py  test_flow_bridges.py  test_health_status_scripts.py  test_intake_scripts.py  test_plugin.py  (+13 more)
(+71 files in other folders)
