[project]
name = "hermes-plugin-oss-repo-agent"
version = "0.2.1"
description = "Guarded GitHub issue-to-PR automation for Hermes, orchestrated by Fala"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fala-runtime==0.2.1",
  "tomli>=2.0.1; python_version < '3.12'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
repo-agent-tick-intake = "repo_agent.tick_intake:main"
repo-agent-tick-dispatch = "repo_agent.tick_dispatch:main"
repo-agent-tick-triage = "repo_agent.tick_triage:main"
repo-agent-tick-cleanup = "repo_agent.tick_cleanup:main"
repo-agent-tick-all = "repo_agent.tick_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_agent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
# Sibling checkout on mini-m4-0 / local OSS layout:
#   Developer/Fala + Developer/hermes-plugin-oss-repo-agent
fala-runtime = { path = "../Fala", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
